{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "DogControls",
            "id": "7561e4e4-f331-45a6-9f41-a165d1bd6480",
            "actions": [
                {
                    "name": "Up",
                    "type": "Value",
                    "id": "82a39427-51f1-46a3-b30a-9dd6a7fd9c10",
                    "expectedControlType": "Key",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Down",
                    "type": "Value",
                    "id": "37bb8c37-79c3-455f-8af5-82783b4757af",
                    "expectedControlType": "Key",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fab5ae0d-ef16-42c4-bc97-ee2f6da6fb0f",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d6f83aea-6274-48e0-9920-276e48f0a0bc",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}